quakeflow-delpoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phasenet-api
  labels:
    app: phasenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phasenet
  template:
    metadata:
      labels:
        app: phasenet
    spec:
      containers:
      - name: phasenet
        image: phasenet-api:1.0
        ports:
        - containerPort: 8000
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: phasenet-api
spec:
  selector:
    app: phasenet
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmma-api
  labels:
    app: gmma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gmma
  template:
    metadata:
      labels:
        app: gmma
    spec:
      containers:
      - name: gmma
        image: gmma-api:1.0
        ports:
        - containerPort: 8001
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: gmma-api
spec:
  selector:
    app: gmma
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakeflow-spark
  labels:
    app: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
  template:
    metadata:
      labels:
        app: spark
    spec:
      containers:
      - name: spark
        image: quakeflow-spark:1.0
        imagePullPolicy: Never
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/US/Pacific
            type: File
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakeflow-waveform
  labels:
    app: waveform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waveform
  template:
    metadata:
      labels:
        app: waveform
    spec:
      containers:
      - name: waveform
        image: quakeflow-waveform:1.0
        imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakeflow-zookeeper
  labels:
    app: quakeflow-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quakeflow-zookeeper
  template:
    metadata:
      labels:
        app: quakeflow-zookeeper
    spec:
      containers:
      - name: quakeflow-zookeeper
        image: quakeflow-zookeeper:1.0
        ports:
        - containerPort: 2181
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: quakeflow-zookeeper
spec:
  selector:
    app: quakeflow-zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakeflow-kafka
  labels:
    app: quakeflow-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quakeflow-kafka
  template:
    metadata:
      labels:
        app: quakeflow-kafka
    spec:
      containers:
      - name: quakeflow-kafka
        image: quakeflow-kafka:1.0
        ports:
        - containerPort: 9092
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: quakeflow-kafka
spec:
  selector:
    app: quakeflow-kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
---
