quakeflow-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phasenet-api
  labels:
    app: phasenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phasenet
  template:
    metadata:
      labels:
        app: phasenet
    spec:
      containers:
      - name: phasenet
        image: phasenet-api:1.0
        ports:
        - containerPort: 8000
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: phasenet-api
spec:
  selector:
    app: phasenet
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmma-api
  labels:
    app: gmma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gmma
  template:
    metadata:
      labels:
        app: gmma
    spec:
      containers:
      - name: gmma
        image: gmma-api:1.0
        ports:
        - containerPort: 8001
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: gmma-api
spec:
  selector:
    app: gmma
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakeflow-spark
  labels:
    app: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
  template:
    metadata:
      labels:
        app: spark
    spec:
      containers:
      - name: spark
        image: quakeflow-spark:1.0
        imagePullPolicy: Never
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/US/Pacific
            type: File
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakeflow-waveform
  labels:
    app: waveform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waveform
  template:
    metadata:
      labels:
        app: waveform
    spec:
      containers:
      - name: waveform
        image: quakeflow-waveform:1.0
        imagePullPolicy: Never
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: quakeflow-streamlit
#   labels:
#     app: quakeflow-streamlit
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: quakeflow-streamlit
#   template:
#     metadata:
#       labels:
#         app: quakeflow-streamlit
#     spec:
#       containers:
#       - name: quakeflow-streamlit
#         image: quakeflow-streamlit:1.0
#         ports:
#         - containerPort: 8501
#         imagePullPolicy: Never
#         resources:
#           requests:
#             cpu: "250m"
#         env:
#         - name: CONSUMER_KEY
#           value: "YOUR_CONSUMER_KEY"
#         - name: CONSUMER_SECRET
#           value: "YOUR_CONSUMER_SECRET"
#         - name: ACCESS_TOKEN
#           value: "YOUR_ACCESS_TOKEN"
#         - name: ACCESS_TOKEN_SECRET
#           value: "YOUR_ACCESS_TOKEN_SECRET"      
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: quakeflow-streamlit
# spec:
#   selector:
#     app: quakeflow-streamlit
#   ports:
#     - protocol: TCP
#       port: 8501
#       targetPort: 8501
